database connection and errorHandler complete

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -9,3 +9,12 @@ CLOUDINARY_CLIENT_SECRET = 06yKoHMtx4JzWe1eIa4naF-BBp8
 
 
 FRONTEND_URL = http://localhost:5173
+
+
+MONGO_URI = mongodb://127.0.0.1:27017
+
+JWT_SECRET_KEY =kdhfiuhifdkjhfurhfh
+
+JWT_EXPIRE = 7d
+
+COOKIE_EXPIRE=5
