applicant apply_job and get_job_details and detele_job and employer_get all job details all are complite

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,12 +1,9 @@
 PORT = 4000
 
 
-CLOUDINARY_CLIENT_NAME = dc1zos2jz
-
-CLOUDINARY_CLIENT_API = 381626185439419
-
-CLOUDINARY_CLIENT_SECRET = 06yKoHMtx4JzWe1eIa4naF-BBp8
-
+CLOUDINARY_CLIENT_NAME=dc1zos2jz
+CLOUDINARY_CLIENT_API=187466714921982
+CLOUDINARY_CLIENT_SECRET=iEkh5f8vrIKgEbSWyMT1YylJ8Hw
 
 FRONTEND_URL = http://localhost:5173
 
